feat(backend): refactor chroma (#9)
* assets update

* fix vector db

* rm rp

* fix ci

* fix path

* update chroma

* update
